# trend-to-rule

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: langfuse.md
docs/adr/: 0001-thesis-as-output-contract.md  0002-structure-as-substrate-not-surface.md
examples/: README.md  sample-output-current-trend.md  sample-output-practical-fashion-advice.md  sample-output-silicon-valley-fashion-evolution.md  sample-output.md
scripts/: run-local-containers.sh
searxng/: settings.yml
src/: Dockerfile  api.py  app.py  docker-compose.yml
src/core/: app_config.py  hf_cache.py  models.py  query_utils.py  template_utils.py  text_utils.py
src/pipeline/: collect_rss.py  embed_articles.py  extract_articles.py
src/prompt_template/: extract_claims.j2  extract_structured_draft.j2  generate_chat_title.j2  generate_decision_support.j2  generate_image_query.j2  generate_search_query.j2  infer_attribute.j2  reflect_final_answer.j2  request_analysis.j2  user_needs.j2
src/retrieval/: app_retrieval.py  search_vectors.py
src/services/: api_client.py  api_models.py  chat.py  chat_runtime.py  chat_session.py  chat_workflow.py  image_search.py  llm_client.py  prompt_service.py  tracing.py  web_search.py
src/storage/: chat_db.py  lmdb_utils.py
src/ui/: app_chat.py  app_sidebar.py  app_state.py  fonts.css  user_avatar.css
tests/: conftest.py  test_api.py  test_api_client.py  test_app_chat.py  test_app_config.py  test_app_state.py  test_chat.py  test_chat_workflow.py  test_image_search.py  test_llm_client_config.py  test_web_search.py
