[project]
name = "trend-to-rule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.12,<3.14"
dependencies = [
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langchain>=1.2.0,<1.3.0",
    "langfuse>=3.0.0",
    "langgraph>=1.1.10,<1.2.0",
    "langgraph-checkpoint-postgres>=3.0.5,<3.1.0",
    "lmdb>=1.7.5",
    "orjson>=3.11.7",
    "psycopg[binary,pool]>=3.3.4,<3.4.0",
    "pydantic>=2.11.7",
    "pydantic-ai-slim[openai]>=1.87.0,<1.88.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.55.0",
    "transformers==4.57.6",
]
